# app

./: .gitignore  .gitmodules  CMakeLists.txt  main.py  setup.py
cozmonaut/: __main__.py  __version__.py
cozmonaut/operation/: __init__.py
cozmonaut/operation/interact/: __init__.py  database.py  face_tracker.py
cozmonaut/operation/interact/conversations/: endgame.json  hello.json  kill.json  mountains.json
cozmonaut/operation/interact/service/: __init__.py
cozmonaut/operation/interact/service/convo/: __init__.py
cozmonaut/operation/interact/service/convo/data/: endgame.json  hello.json  kill.json  mountains.json  starWars.json  whosOnFirst.json
cozmonaut/operation/interact/service/face/: __init__.py
cozmonaut/operation/interact/service/speech/: __init__.py
misc/python/: activeRandom.py  database.py  waypoint.py  waypoint2.py
python/: chargerReturn.py  cozmoDB.sql  database.py  tableSQL.txt  waypoint.py
python/cozmonaut/: __init__.py  __main__.py
python/cozmonaut/operation/: __init__.py  friends_list.py  friends_remove.py
python/cozmonaut/operation/interact/: __init__.py  database.py  face_tracker.py
python/misc/: activeRandom.py  freeplay.py  pong.py  waypoint.py
src/: global.c  global.h  khash.h  log.c  log.h  log_fmt.cpp  main.c  service.c  service.h
src/service/: console.c  console.h  python.c  python.h
